--- a/TestViewPage/res/layout/activity_main.xml
+++ b/TestViewPage/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical" >
 
     <RelativeLayout
         style="@style/set_title"
@@ -14,22 +14,15 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/hello_world"
+            android:text="A"
             android:textColor="#FFFFFF" />
     </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/framelayout"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8.9"
-        android:layout_centerVertical="true" >
+        android:layout_height="match_parent"
+        >
     </FrameLayout>
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        layout="@layout/bottom_title" />
-
-</RelativeLayout>
+</LinearLayout>
