--- a/TestViewPage/res/layout/activity_base.xml
+++ b/TestViewPage/res/layout/activity_base.xml
@@ -1,15 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <android.support.v4.view.ViewPager
-            android:id="@+id/viewPage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:id="@+id/viewPage"
+        android:layout_width="match_parent"
+       android:layout_height="0dp"
+        android:layout_weight="1" />
 
-   
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/bottom_title" />
 
-</RelativeLayout>
+</LinearLayout>
