--- a/TestViewPage/res/layout/activity_base.xml
+++ b/TestViewPage/res/layout/activity_base.xml
@@ -7,12 +7,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPage"
         android:layout_width="match_parent"
-       android:layout_height="0dp"
-        android:layout_weight="1" />
+       android:layout_height="match_parent"
+         />
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/bottom_title" />
-
+    
 </LinearLayout>
