--- a/TestViewPage/res/layout/activity_main.xml
+++ b/TestViewPage/res/layout/activity_main.xml
@@ -6,23 +6,70 @@
 
     <RelativeLayout
         style="@style/set_title"
-        android:background="#006600" >
+        android:background="#303030" >
 
-        <TextView
-            android:id="@+id/txt"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal" >
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" >
+
+                <ImageView
+                    android:id="@+id/img_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="4dp"
+                    android:background="@drawable/lz"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="安兄"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/img_pop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="A"
-            android:textColor="#FFFFFF" />
+            android:layout_marginRight="2dp"
+            android:background="@drawable/ma" />
     </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/framelayout"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="0dp"
+        android:layout_weight="1" >
     </FrameLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:text="——"
+        android:textColor="#F0F8FF" />
+
+    <LinearLayout
+        android:id="@+id/include"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/bottom_title" />
+    </LinearLayout>
 
 </LinearLayout>
